# sigit

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  server.json
.agents/: AGENTS.md  resources.md
.agents/skills/agent-client-protocol/: SKILL.md
.agents/skills/ai-assisted-coding/: SKILL.md
.agents/skills/branding/: SKILL.md
.agents/skills/sigit-code-release/: SKILL.md
.agents/skills/tool-calling/: SKILL.md
.claude/skills/run-sigit/: SKILL.md  driver.mjs  tui-smoke.sh
.github/workflows/: ci.yml  release-crates.yml  release-github.yml  release-homebrew.yml  release-mcp-registry.yml  release-npm.yml  release-pypi.yml  release.yml
docs/: hooks.md  mcp.md
examples/: settings-with-hooks.toml
examples/skills/: README.md
examples/skills/commit-message/: SKILL.md
npm/: README.md.tmpl  package-main.json.tmpl  package.json.tmpl
npm/sigit/: README.md  package.json
npm/sigit/src/: index.ts
pypi/: README.md  pyproject.toml
src/: account.rs  backend.rs  chat.rs  commands.rs  credentials.rs  frontmatter.rs  headless.rs  hooks.rs  instructions.rs  main.rs  mcp.rs  models.rs  permissions.rs  provider.rs  session_store.rs  sessions.rs  settings.rs  setup.rs  skills.rs  subagents.rs  tools.rs
tests/: acp_permissions.rs  headless_mode.rs  headless_run.rs  mcp_stdio.rs
