[package]
name = "sigit"
version = "0.1.1"
edition = "2024"
description = "siGit Code — ACP-compatible AI coding agent for smbCloud platform."
documentation = "https://github.com/getsigit/sigit"
license = "Apache-2.0"

[[bin]]
name = "sigit"
path = "src/main.rs"

[dependencies]
# ACP protocol SDK
agent-client-protocol = "0.10.4"

# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# Utilities
anyhow = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
