[package]
name = "sigit"
version = "0.1.1"
edition = "2024"
description = "siGit Code — ACP-compatible AI coding agent for smbCloud platform."
documentation = "https://github.com/getsigit/sigit"
license = "Apache-2.0"

[[bin]]
name = "sigit"
path = "src/main.rs"

[dependencies]
# ACP protocol SDK
agent-client-protocol = "0.10.4"

# Onde Inference engine (local LLM)
# Can't use crates.io (core2 0.4.0 yanked). Git dep so CI builds without ../onde.
onde = { git = "https://github.com/ondeinference/onde", branch = "development" }

# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# TUI (interactive chat mode)
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }

# Utilities
anyhow = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

# Workaround: core2 0.4.0 was yanked from crates.io but is still needed by
# bitstream-io → rav1e → ravif → image → mistralrs → onde.
[patch.crates-io]
core2 = { git = "https://github.com/bbqsrc/core2", rev = "545e84bc" }
