[package]
name = "sigit"
version = "1.2.1"
edition = "2024"
description = "siGit Code — ACP-compatible AI coding agent. Sí, git."
documentation = "https://github.com/getsigit/sigit"
license = "Apache-2.0"
repository = "https://github.com/getsigit/sigit"
homepage = "https://sigit.si"
readme = "README.md"
keywords = ["sigit", "cli", "ai", "coding-agent", "llm"]
categories = ["command-line-utilities"]
authors = ["Seto Elkahfi <seto@ondeinference.com>"]

[[bin]]
name = "sigit"
path = "src/main.rs"

[dependencies]
# ACP protocol SDK
agent-client-protocol = { version = "0.13", features = ["unstable_session_fork", "unstable_session_additional_directories", "unstable_auth_methods"] }

# Onde Inference engine (local LLM)
# onde = { path = "../onde" }
onde = "1.1.2"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# TUI (interactive chat mode)
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }

# Utilities
anyhow = "1"
libc = "0.2"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
uuid = { version = "1", features = ["v4"] }
rpassword = "7"
